parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statements -> expression
Rule 4     statement -> NAME EQUALS expression
Rule 5     statement -> CONSTANT expression
Rule 6     statement -> DEF NAME LPAREN NAME RPAREN DO statements END
Rule 7     statement -> IF expression DO statements END
Rule 8     statement -> IF expression DO statements ELSE statements END
Rule 9     statement -> FOR NAME FOREXPR NAME DO statements END
Rule 10    statement -> WHILE statement DO statements END
Rule 11    expression -> NUMBER
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression GREATER expression
Rule 17    expression -> expression LESS expression
Rule 18    expression -> expression GREATEQ expression
Rule 19    expression -> expression LESSEQ expression
Rule 20    expression -> expression AND expression
Rule 21    expression -> expression OR expression
Rule 22    expression -> MINUS expression
Rule 23    expression -> LPAREN expression RPAREN
Rule 24    expression -> INT
Rule 25    expression -> DOUBLE
Rule 26    expression -> CHAR
Rule 27    expression -> TRUE
Rule 28    expression -> FALSE
Rule 29    expression -> STRING
Rule 30    expression -> NAME

Terminals, with rules where they appear

AND                  : 20
CHAR                 : 26
CONSTANT             : 5
DEF                  : 6
DIVIDE               : 15
DO                   : 6 7 8 9 10
DOUBLE               : 25
ELSE                 : 8
END                  : 6 7 8 9 10
EQUALS               : 4
FALSE                : 28
FOR                  : 9
FOREXPR              : 9
GREATEQ              : 18
GREATER              : 16
IF                   : 7 8
INT                  : 24
LESS                 : 17
LESSEQ               : 19
LPAREN               : 6 23
MINUS                : 13 22
NAME                 : 4 6 6 9 9 30
NUMBER               : 11
OR                   : 21
PLUS                 : 12
RPAREN               : 6 23
STRING               : 29
TIMES                : 14
TRUE                 : 27
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 5 7 8 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23
statement            : 1 2 10
statements           : 1 6 7 8 8 9 10 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statements -> . expression
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . CONSTANT expression
    (6) statement -> . DEF NAME LPAREN NAME RPAREN DO statements END
    (7) statement -> . IF expression DO statements END
    (8) statement -> . IF expression DO statements ELSE statements END
    (9) statement -> . FOR NAME FOREXPR NAME DO statements END
    (10) statement -> . WHILE statement DO statements END
    (11) expression -> . NUMBER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression GREATEQ expression
    (19) expression -> . expression LESSEQ expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . MINUS expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . INT
    (25) expression -> . DOUBLE
    (26) expression -> . CHAR
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . STRING
    (30) expression -> . NAME

    NAME            shift and go to state 15
    CONSTANT        shift and go to state 1
    DEF             shift and go to state 8
    IF              shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 4
    NUMBER          shift and go to state 2
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 13
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 3
    TRUE            shift and go to state 6
    FALSE           shift and go to state 14
    STRING          shift and go to state 9

    expression                     shift and go to state 18
    statements                     shift and go to state 5
    statement                      shift and go to state 10

state 1

    (5) statement -> CONSTANT . expression
    (11) expression -> . NUMBER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression GREATEQ expression
    (19) expression -> . expression LESSEQ expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . MINUS expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . INT
    (25) expression -> . DOUBLE
    (26) expression -> . CHAR
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . STRING
    (30) expression -> . NAME

    NUMBER          shift and go to state 2
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 13
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 3
    TRUE            shift and go to state 6
    FALSE           shift and go to state 14
    STRING          shift and go to state 9
    NAME            shift and go to state 19

    expression                     shift and go to state 20

state 2

    (11) expression -> NUMBER .

    PLUS            reduce using rule 11 (expression -> NUMBER .)
    MINUS           reduce using rule 11 (expression -> NUMBER .)
    TIMES           reduce using rule 11 (expression -> NUMBER .)
    DIVIDE          reduce using rule 11 (expression -> NUMBER .)
    GREATER         reduce using rule 11 (expression -> NUMBER .)
    LESS            reduce using rule 11 (expression -> NUMBER .)
    GREATEQ         reduce using rule 11 (expression -> NUMBER .)
    LESSEQ          reduce using rule 11 (expression -> NUMBER .)
    AND             reduce using rule 11 (expression -> NUMBER .)
    OR              reduce using rule 11 (expression -> NUMBER .)
    NAME            reduce using rule 11 (expression -> NUMBER .)
    CONSTANT        reduce using rule 11 (expression -> NUMBER .)
    DEF             reduce using rule 11 (expression -> NUMBER .)
    IF              reduce using rule 11 (expression -> NUMBER .)
    FOR             reduce using rule 11 (expression -> NUMBER .)
    WHILE           reduce using rule 11 (expression -> NUMBER .)
    $end            reduce using rule 11 (expression -> NUMBER .)
    DO              reduce using rule 11 (expression -> NUMBER .)
    END             reduce using rule 11 (expression -> NUMBER .)
    ELSE            reduce using rule 11 (expression -> NUMBER .)
    RPAREN          reduce using rule 11 (expression -> NUMBER .)


state 3

    (26) expression -> CHAR .

    PLUS            reduce using rule 26 (expression -> CHAR .)
    MINUS           reduce using rule 26 (expression -> CHAR .)
    TIMES           reduce using rule 26 (expression -> CHAR .)
    DIVIDE          reduce using rule 26 (expression -> CHAR .)
    GREATER         reduce using rule 26 (expression -> CHAR .)
    LESS            reduce using rule 26 (expression -> CHAR .)
    GREATEQ         reduce using rule 26 (expression -> CHAR .)
    LESSEQ          reduce using rule 26 (expression -> CHAR .)
    AND             reduce using rule 26 (expression -> CHAR .)
    OR              reduce using rule 26 (expression -> CHAR .)
    NAME            reduce using rule 26 (expression -> CHAR .)
    CONSTANT        reduce using rule 26 (expression -> CHAR .)
    DEF             reduce using rule 26 (expression -> CHAR .)
    IF              reduce using rule 26 (expression -> CHAR .)
    FOR             reduce using rule 26 (expression -> CHAR .)
    WHILE           reduce using rule 26 (expression -> CHAR .)
    $end            reduce using rule 26 (expression -> CHAR .)
    DO              reduce using rule 26 (expression -> CHAR .)
    END             reduce using rule 26 (expression -> CHAR .)
    ELSE            reduce using rule 26 (expression -> CHAR .)
    RPAREN          reduce using rule 26 (expression -> CHAR .)


state 4

    (10) statement -> WHILE . statement DO statements END
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . CONSTANT expression
    (6) statement -> . DEF NAME LPAREN NAME RPAREN DO statements END
    (7) statement -> . IF expression DO statements END
    (8) statement -> . IF expression DO statements ELSE statements END
    (9) statement -> . FOR NAME FOREXPR NAME DO statements END
    (10) statement -> . WHILE statement DO statements END

    NAME            shift and go to state 21
    CONSTANT        shift and go to state 1
    DEF             shift and go to state 8
    IF              shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 4

    statement                      shift and go to state 22

state 5

    (0) S' -> statements .
    (1) statements -> statements . statement
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . CONSTANT expression
    (6) statement -> . DEF NAME LPAREN NAME RPAREN DO statements END
    (7) statement -> . IF expression DO statements END
    (8) statement -> . IF expression DO statements ELSE statements END
    (9) statement -> . FOR NAME FOREXPR NAME DO statements END
    (10) statement -> . WHILE statement DO statements END

    NAME            shift and go to state 21
    CONSTANT        shift and go to state 1
    DEF             shift and go to state 8
    IF              shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 4

    statement                      shift and go to state 23

state 6

    (27) expression -> TRUE .

    PLUS            reduce using rule 27 (expression -> TRUE .)
    MINUS           reduce using rule 27 (expression -> TRUE .)
    TIMES           reduce using rule 27 (expression -> TRUE .)
    DIVIDE          reduce using rule 27 (expression -> TRUE .)
    GREATER         reduce using rule 27 (expression -> TRUE .)
    LESS            reduce using rule 27 (expression -> TRUE .)
    GREATEQ         reduce using rule 27 (expression -> TRUE .)
    LESSEQ          reduce using rule 27 (expression -> TRUE .)
    AND             reduce using rule 27 (expression -> TRUE .)
    OR              reduce using rule 27 (expression -> TRUE .)
    NAME            reduce using rule 27 (expression -> TRUE .)
    CONSTANT        reduce using rule 27 (expression -> TRUE .)
    DEF             reduce using rule 27 (expression -> TRUE .)
    IF              reduce using rule 27 (expression -> TRUE .)
    FOR             reduce using rule 27 (expression -> TRUE .)
    WHILE           reduce using rule 27 (expression -> TRUE .)
    $end            reduce using rule 27 (expression -> TRUE .)
    DO              reduce using rule 27 (expression -> TRUE .)
    END             reduce using rule 27 (expression -> TRUE .)
    ELSE            reduce using rule 27 (expression -> TRUE .)
    RPAREN          reduce using rule 27 (expression -> TRUE .)


state 7

    (22) expression -> MINUS . expression
    (11) expression -> . NUMBER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression GREATEQ expression
    (19) expression -> . expression LESSEQ expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . MINUS expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . INT
    (25) expression -> . DOUBLE
    (26) expression -> . CHAR
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . STRING
    (30) expression -> . NAME

    NUMBER          shift and go to state 2
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 13
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 3
    TRUE            shift and go to state 6
    FALSE           shift and go to state 14
    STRING          shift and go to state 9
    NAME            shift and go to state 19

    expression                     shift and go to state 24

state 8

    (6) statement -> DEF . NAME LPAREN NAME RPAREN DO statements END

    NAME            shift and go to state 25


state 9

    (29) expression -> STRING .

    PLUS            reduce using rule 29 (expression -> STRING .)
    MINUS           reduce using rule 29 (expression -> STRING .)
    TIMES           reduce using rule 29 (expression -> STRING .)
    DIVIDE          reduce using rule 29 (expression -> STRING .)
    GREATER         reduce using rule 29 (expression -> STRING .)
    LESS            reduce using rule 29 (expression -> STRING .)
    GREATEQ         reduce using rule 29 (expression -> STRING .)
    LESSEQ          reduce using rule 29 (expression -> STRING .)
    AND             reduce using rule 29 (expression -> STRING .)
    OR              reduce using rule 29 (expression -> STRING .)
    NAME            reduce using rule 29 (expression -> STRING .)
    CONSTANT        reduce using rule 29 (expression -> STRING .)
    DEF             reduce using rule 29 (expression -> STRING .)
    IF              reduce using rule 29 (expression -> STRING .)
    FOR             reduce using rule 29 (expression -> STRING .)
    WHILE           reduce using rule 29 (expression -> STRING .)
    $end            reduce using rule 29 (expression -> STRING .)
    DO              reduce using rule 29 (expression -> STRING .)
    END             reduce using rule 29 (expression -> STRING .)
    ELSE            reduce using rule 29 (expression -> STRING .)
    RPAREN          reduce using rule 29 (expression -> STRING .)


state 10

    (2) statements -> statement .

    END             reduce using rule 2 (statements -> statement .)
    NAME            reduce using rule 2 (statements -> statement .)
    CONSTANT        reduce using rule 2 (statements -> statement .)
    DEF             reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)


state 11

    (7) statement -> IF . expression DO statements END
    (8) statement -> IF . expression DO statements ELSE statements END
    (11) expression -> . NUMBER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression GREATEQ expression
    (19) expression -> . expression LESSEQ expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . MINUS expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . INT
    (25) expression -> . DOUBLE
    (26) expression -> . CHAR
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . STRING
    (30) expression -> . NAME

    NUMBER          shift and go to state 2
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 13
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 3
    TRUE            shift and go to state 6
    FALSE           shift and go to state 14
    STRING          shift and go to state 9
    NAME            shift and go to state 19

    expression                     shift and go to state 26

state 12

    (9) statement -> FOR . NAME FOREXPR NAME DO statements END

    NAME            shift and go to state 27


state 13

    (23) expression -> LPAREN . expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression GREATEQ expression
    (19) expression -> . expression LESSEQ expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . MINUS expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . INT
    (25) expression -> . DOUBLE
    (26) expression -> . CHAR
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . STRING
    (30) expression -> . NAME

    NUMBER          shift and go to state 2
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 13
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    CHAR            shift and go to state 3
    TRUE            shift and go to state 6
    FALSE           shift and go to state 14
    STRING          shift and go to state 9
    NAME            shift and go to state 19

    expression                     shift and go to state 28

state 14

    (28) expression -> FALSE .

    PLUS            reduce using rule 28 (expression -> FALSE .)
    MINUS           reduce using rule 28 (expression -> FALSE .)
    TIMES           reduce using rule 28 (expression -> FALSE .)
    DIVIDE          reduce using rule 28 (expression -> FALSE .)
    GREATER         reduce using rule 28 (expression -> FALSE .)
    LESS            reduce using rule 28 (expression -> FALSE .)
    GREATEQ         reduce using rule 28 (expression -> FALSE .)
    LESSEQ          reduce using rule 28 (expression -> FALSE .)
    AND             reduce using rule 28 (expression -> FALSE .)
    OR              reduce using rule 28 (expression -> FALSE .)
    NAME            reduce using rule 28 (expression -> FALSE .)
    CONSTANT        reduce using rule 28 (expression -> FALSE .)
    DEF             reduce using rule 28 (expression -> FALSE .)
    IF              reduce using rule 28 (expression -> FALSE .)
    FOR             reduce using rule 28 (expression -> FALSE .)
    WHILE           reduce using rule 28 (expression -> FALSE .)
    $end            reduce using rule 28 (expression -> FALSE .)
    DO              reduce using rule 28 (expression -> FALSE .)
    END             reduce using rule 28 (expression -> FALSE .)
    ELSE            reduce using rule 28 (expression -> FALSE .)
    RPAREN          reduce using rule 28 (expression -> FALSE .)


state 15

    (4) statement -> NAME . EQUALS expression
    (30) expression -> NAME .

    EQUALS          shift and go to state 29
    PLUS            reduce using rule 30 (expression -> NAME .)
    MINUS           reduce using rule 30 (expression -> NAME .)
    TIMES           reduce using rule 30 (expression -> NAME .)
    DIVIDE          reduce using rule 30 (expression -> NAME .)
    GREATER         reduce using rule 30 (expression -> NAME .)
    LESS            reduce using rule 30 (expression -> NAME .)
    GREATEQ         reduce using rule 30 (expression -> NAME .)
    LESSEQ          reduce using rule 30 (expression -> NAME .)
    AND             reduce using rule 30 (expression -> NAME .)
    OR              reduce using rule 30 (expression -> NAME .)
    END             reduce using rule 30 (expression -> NAME .)
    NAME            reduce using rule 30 (expression -> NAME .)
    CONSTANT        reduce using rule 30 (expression -> NAME .)
    DEF             reduce using rule 30 (expression -> NAME .)
    IF              reduce using rule 30 (expression -> NAME .)
    FOR             reduce using rule 30 (expression -> NAME .)
    WHILE           reduce using rule 30 (expression -> NAME .)
    ELSE            reduce using rule 30 (expression -> NAME .)
    $end            reduce using rule 30 (expression -> NAME .)


state 16

    (24) expression -> INT .

    PLUS            reduce using rule 24 (expression -> INT .)
    MINUS           reduce using rule 24 (expression -> INT .)
    TIMES           reduce using rule 24 (expression -> INT .)
    DIVIDE          reduce using rule 24 (expression -> INT .)
    GREATER         reduce using rule 24 (expression -> INT .)
    LESS            reduce using rule 24 (expression -> INT .)
    GREATEQ         reduce using rule 24 (expression -> INT .)
    LESSEQ          reduce using rule 24 (expression -> INT .)
    AND             reduce using rule 24 (expression -> INT .)
    OR              reduce using rule 24 (expression -> INT .)
    NAME            reduce using rule 24 (expression -> INT .)
    CONSTANT        reduce using rule 24 (expression -> INT .)
    DEF             reduce using rule 24 (expression -> INT .)
    IF              reduce using rule 24 (expression -> INT .)
    FOR             reduce using rule 24 (expression -> INT .)
    WHILE           reduce using rule 24 (expression -> INT .)
    $end            reduce using rule 24 (expression -> INT .)
    DO              reduce using rule 24 (expression -> INT .)
    END             reduce using rule 24 (expression -> INT .)
    ELSE            reduce using rule 24 (expression -> INT .)
    RPAREN          reduce using rule 24 (expression -> INT .)


state 17

    (25) expression -> DOUBLE .

    PLUS            reduce using rule 25 (expression -> DOUBLE .)
    MINUS           reduce using rule 25 (expression -> DOUBLE .)
    TIMES           reduce using rule 25 (expression -> DOUBLE .)
    DIVIDE          reduce using rule 25 (expression -> DOUBLE .)
    GREATER         reduce using rule 25 (expression -> DOUBLE .)
    LESS            reduce using rule 25 (expression -> DOUBLE .)
    GREATEQ         reduce using rule 25 (expression -> DOUBLE .)
    LESSEQ          reduce using rule 25 (expression -> DOUBLE .)
    AND             reduce using rule 25 (expression -> DOUBLE .)
    OR              reduce using rule 25 (expression -> DOUBLE .)
    NAME            reduce using rule 25 (expression -> DOUBLE .)
    CONSTANT        reduce using rule 25 (expression -> DOUBLE .)
    DEF             reduce using rule 25 (expression -> DOUBLE .)
    IF              reduce using rule 25 (expression -> DOUBLE .)
    FOR             reduce using rule 25 (expression -> DOUBLE .)
    WHILE           reduce using rule 25 (expression -> DOUBLE .)
    $end            reduce using rule 25 (expression -> DOUBLE .)
    DO              reduce using rule 25 (expression -> DOUBLE .)
    END             reduce using rule 25 (expression -> DOUBLE .)
    ELSE            reduce using rule 25 (expression -> DOUBLE .)
    RPAREN          reduce using rule 25 (expression -> DOUBLE .)


state 18

    (3) statements -> expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . GREATER expression
    (17) expression -> expression . LESS expression
    (18) expression -> expression . GREATEQ expression
    (19) expression -> expression . LESSEQ expression
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression

    END             reduce using rule 3 (statements -> expression .)
    NAME            reduce using rule 3 (statements -> expression .)
    CONSTANT        reduce using rule 3 (statements -> expression .)
    DEF             reduce using rule 3 (statements -> expression .)
    IF              reduce using rule 3 (statements -> expression .)
    FOR             reduce using rule 3 (statements -> expression .)
    WHILE           reduce using rule 3 (statements -> expression .)
    $end            reduce using rule 3 (statements -> expression .)
    ELSE            reduce using rule 3 (statements -> expression .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 32
    GREATER         shift and go to state 39
    LESS            shift and go to state 34
    GREATEQ         shift and go to state 33
    LESSEQ          shift and go to state 36
    AND             shift and go to state 30
    OR              shift and go to state 31


state 19

    (30) expression -> NAME .
